--- a/manifest.json.old.json
+++ b/manifest.json.old.json
@@ -4,11 +4,12 @@
   "manifest version": 2,
   "description": "The Findings Chrome extension",
   "background": {
-  	"page": "fdgs_background.html"
+  	"page": "background.html"
   },
   "browser_action": {
   	"default_icon": "icon.png",
-  	"default_title": "Findings.com"
+  	"default_title": "Findings.com",
+  	"default_popup": "popup.html"
   },
   "permissions": [
   	"tabs",
