--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Findings",
-  "version": "0.1",
+  "version": "0.3",
   "manifest version": 2,
   "description": "The Findings Chrome extension",
   "background": {
@@ -10,14 +10,10 @@
   	"default_icon": "icon.png",
   	"default_title": "Findings.com"
   },
+  "options_page": "options.html",
   "permissions": [
   	"tabs",
   	"http://*/*",
   	"https://*/*"
   ]
-
 }
-/*
-	"background_page": "background.html",
-	"icons" : { "16" : "icon.png" }
-*/
