Added Findings header, cleaned up option display cases (was way too complicated), added a placeholder "working" extension icon

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   	"page": "fdgs_background.html"
   },
   "browser_action": {
-  	"default_icon": "icon.png",
+  	"default_icon": "findings-icon-16x16.gif",
   	"default_title": "Findings.com"
   },
   "options_page": "options.html",
