--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,18 @@
 {
   "name": "Findings",
-  "version": "0.16",
+  "version": "0.20",
   "manifest version": 2,
-  "description": "The Findings Chrome extension",
+  "icons": {
+    "128": "icon-128x128.png",
+    "48": "icon-48x48.png",
+    "16": "icon-16x16.png"
+  },
+  "description": "Discover the highlights",
   "background": {
   	"page": "fdgs_background.html"
   },
   "browser_action": {
-  	"default_icon": "findings-icon-16x16.gif",
+  	"default_icon": "icon-16x16.png",
   	"default_title": "Findings.com"
   },
   "options_page": "options.html",
