--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Findings",
-    "version": "0.39",
+    "version": "0.41",
     "manifest_version": 2,
     "icons": {
         "128": "icon-128x128.png",
@@ -33,6 +33,7 @@
     ],
     "permissions": [
         "tabs",
+        "contextMenus",
         "notifications",
         "http://*/*",
         "https://*/*"
