--- a/src/manifest.json
+++ b/src/manifest.json
@@ -30,7 +30,8 @@
     "web_accessible_resources": [
         "icon-16x16.png",
         "icon-48x48.png",
-        "icon-128x128.png"
+        "icon-128x128.png",
+        "images/*"
     ],
     "permissions": [
         "tabs",
